# AI-Playground

./: README.md  test-backend.sh
ai-playground-backend/: .env.example  .gitignore  Makefile  Readme.md  ai_playground.db  alembic.ini  create_tables.py  database.py  main.py  models.py  pyproject.toml  requirements.txt
ai-playground-backend/alembic/: env.py
ai-playground-backend/alembic/versions/: 073a3fe37951_init_database.py  1e7b4fe1feb3_init.py  320ab7fefd86_add_message_table.py  76fce4a27b0d_create_users_projects_chats_tables.py  7ee8caf1be6e_add_message_table2.py  9f254e5c3227_add_bots_table.py  abe0ae20eea9_create_chats_table.py  c913c6d55d45_added_user_id_to_project.py  e86ca0fb5244_add_message_table1.py  e92df0eba6a2_create_users_and_projects_tables.py  f7b8d8903ef7_initial_migration.py
ai-playground-backend/bots/: geminibot.py  sarvambot.py
ai-playground-backend/middleware/: auth_middleware.py
ai-playground-backend/routes/: projects.py
ai-playground-backend/routes/project/: create.py  delete.py  get.py  update.py
ai-playground-backend/src/: main.py
ai-playground-backend/src/bots/: geminibot.py  sarvambot.py
ai-playground-backend/src/database/: database.py
ai-playground-backend/src/database/migration/: create_tables.py
ai-playground-backend/src/database/models/: __init__.py  botmodel.py  chatmodel.py  messagemodel.py  projectmodel.py  usermodel.py
ai-playground-backend/src/middleware/: auth_middleware.py
ai-playground-backend/src/routes/: indexchat.py  indexproject.py
ai-playground-backend/src/service/: jwthandler.py
(+58 files in other folders)
